--- a/pages/home.html
+++ b/pages/home.html
@@ -1,13 +1,12 @@
-
-<section class="container-fluid fixed-bottom">
+<section class="container-fluid fixed-bottom" id="home">
     <div class="row">
         <div class="col-12 text-medsos">
             <h1 class="jobdesc border-bottom mb-3">Junior Fullstack Web Developer</h1>
             <h3>Hai, I'm <span class="fullname">Firhan Abigael.</span></h3>
             <section class="media-social">
-                <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/firhangael15"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/firhan-abigael-abb619142/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
             </section>
         </div>
     </div>
