--- a/pages/about.html
+++ b/pages/about.html
@@ -1,11 +1,10 @@
-<section class="container-fluid fixed-bottom" id="about_me" style="display: none;">
+<section class="container-fluid" id="about_me" style="display: none;">
 	<div class="row">
 		<div class="col-sm-8 col-md-7 offset-sm-3 offset-md-4">
-			<span class="d_navigation"></span>
 			<h5><b>About Me</b></h5>
 		</div>
 		<div class="col-sm-8 col-md-7 offset-sm-3 offset-md-4">
-			<label style="text-align: justify; font-size: 12px;">
+			<label style="text-align: justify;">
 				<p>
 					<b>Firhan Abigael</b><br>
 					Programmer Full Stack Web Developer SMK Bangun Nusantara. berdomisili di Jakarta Barat, Menyukai pemrograman berbasis website dan menguasai beberapa bahasa pemrograman seperti HTML, PHP, Javascript, JQUERY, CSS, Database MySQL, Framework Codeigniter & Laravel.
