adding fitur portofolio & contact me

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-            </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -75,11 +75,11 @@
                                     <i class="fa fa-suitcase" aria-hidden="true"></i><br>My Job Experience</label>
                             </div>
                             <div class="col-4" style="text-align: center;">
-                                <label id="m_page_btn" page="pages_portofolio">
+                                <label id="m_page_btn" page="my_portfolio">
                                     <i class="fa fa-briefcase" aria-hidden="true"></i><br>My Portofolio</label>
                             </div>
                             <div class="col-4" style="text-align: center;">
-                                <label id="m_page_btn" page="pages_contact_me">
+                                <label id="m_page_btn" page="contact_me">
                                     <i class="fa fa-phone" aria-hidden="true"></i><br>Contact Me</label>
                             </div>
                         </div>
@@ -106,6 +106,7 @@
     <script src="assets/js/education.js"></script>
     <script src="assets/js/portfolio.js"></script>
     <script src="assets/js/experience.js"></script>
+    <script src="assets/js/contact.js"></script>
     <script src="assets/js/menu.js"></script>
 
     <script type="text/javascript">
@@ -128,6 +129,8 @@
             $("#page_about_me").load('pages/about.html');
             $("#page_my_education").load('pages/education.html');
             $("#page_my_job").load('pages/experience.html');
+            $("#page_contact_me").load('pages/contact.html');
+            $("#page_my_portfolio").load('pages/portofolio.html');
             
         });
         // dekstop version
