--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
 					Programmer Full Stack Web Developer SMK Bangun Nusantara. berdomisili di Jakarta Barat, Menyukai pemrograman berbasis website dan menguasai beberapa bahasa pemrograman seperti HTML, PHP, Javascript, JQUERY, CSS, Database MySQL, Framework Codeigniter & Laravel.
 				</p>
 				<p>
-					Lahir di Jakarta, 1 Maret 1997. Menempuh pendidikan dari TK hingga SMA di Kota Tangerang Selatan, Banten dan sedang melanjutkan kuliah di STMIK Eresha, Tangerang Selatan.
+					Lahir di Jakarta, 1 Maret 1997. Menempuh pendidikan dari TK hingga SMK di Bangun Nusantara Tangerang dan sedang melanjutkan kuliah di STMIK Eresha, Tangerang Selatan.
 				</p>
 			</label>
 		</div>
