edit about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,13 +6,45 @@
 		<div class="col-sm-8 col-md-7 offset-sm-3 offset-md-4">
 			<label style="text-align: justify;">
 				<p>
-					<b>Firhan Abigael</b><br>
-					Programmer Full Stack Web Developer SMK Bangun Nusantara. berdomisili di Jakarta Barat, Menyukai pemrograman berbasis website dan menguasai beberapa bahasa pemrograman seperti HTML, PHP, Javascript, JQUERY, CSS, Database MySQL, Framework Codeigniter & Laravel.
-				</p>
-				<p>
-					Lahir di Jakarta, 1 Maret 1997. Menempuh pendidikan dari TK hingga SMK di Bangun Nusantara Tangerang dan sedang melanjutkan kuliah di STMIK Eresha, Tangerang Selatan.
+					My name is <b>Firhan Abigael.</b><br/>
+					I'm 23 Years Old and i live in Jakarta Barat. My last education is Senior High School and now i still studying in university of pamulang.
+					My majors is Computer Enginering(IT), i have a skill in Web Programming.<br/>
+					I am a person who has high integrity towards work and likes to learn new things. I really like challenges and have motivation at work.
 				</p>
 			</label>
+			<div class="col">
+				<div class="row">
+					<div class="col">
+						<p>
+							Personal Skill
+							<ul>
+								<li>Quick Learner</li>
+								<li>Creative</li>
+								<li>Communicate</li>
+								<li>Work Harder</li>
+							</ul>
+						</p>
+					</div>
+					<div class="col">
+						<p>
+							Profesional Skill
+							<ul>
+								<li>PHP</li>
+								<li>CSS</li>
+								<li>Javascript</li>
+								<li>SCSS</li>
+								<li>Git Version</li>
+								<li>Framework PHP Codeigniter</li>
+								<li>Framework PHP Laravel</li>
+								<li>Library Javascript React js</li>
+								<li>Bootstrap</li>
+								<li>JQuery</li>
+								<li>Ajax</li>
+							</ul>
+						</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
