--- a/pages/about.html
+++ b/pages/about.html
@@ -29,6 +29,10 @@
 						<p>
 							Profesional Skill
 							<ul>
+								<li>Node.js</li>
+								<li>Express.js</li>
+								<li>Mysql</li>
+								<li>Mongodb</li>
 								<li>PHP</li>
 								<li>CSS</li>
 								<li>Javascript</li>
@@ -37,6 +41,7 @@
 								<li>Framework PHP Codeigniter</li>
 								<li>Framework PHP Laravel</li>
 								<li>Library Javascript React js</li>
+								<li>Library Javascript React Native</li>
 								<li>Bootstrap</li>
 								<li>JQuery</li>
 								<li>Ajax</li>
