--- a/pages/experience.html
+++ b/pages/experience.html
@@ -4,12 +4,16 @@
         for(var i=0; i<experience.length; i++){
             my_job += '<div class="row">';
             my_job += '<div class="col-sm-8 col-md-7 offset-sm-3 offset-md-4">';
-            my_job += '<div class="shadow-lg p-3 mb-5 bg-lightgrey rounded">';
+            my_job += '<div class="shadow-lg p-3 mb-1 bg-lightgrey rounded">';
             my_job += "<h5>"+experience[i][0]+" - "+experience[i][2]+"</h5>";
             my_job += "<h6><i class='fa fa-calendar'></i> "+experience[i][1]+"</h6>";
             my_job += '<p>';
-            for(var x=0; x<experience[i][3].length; x++){
-                my_job += '<li>'+experience[i][3][x]+'</li>';
+            if(experience[i][3] !== undefined) {
+                if(experience[i][3].length > 0) {
+                    for(var x=0; x<experience[i][3].length; x++){
+                        my_job += '<li>'+experience[i][3][x]+'</li>';
+                    }
+                }
             }
             my_job += '</p>';  
             my_job += '</div>'; 
