--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>
                         Firhan Abigael
                     </p>
-                    <span>Full Stack Web Developer</span>
+                    <span>Software Engineer</span>
                 </div>
             </div>
         </div>
