--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <section class="container-fluid fixed-bottom" id="home">
     <div class="row">
         <div class="col-12 text-medsos">
-            <h1 class="jobdesc border-bottom mb-3">Fullstack Web Developer</h1>
+            <h1 class="jobdesc border-bottom mb-3">Software Engineer</h1>
             <h3>Hai, I'm <span class="fullname">Firhan Abigael.</span></h3>
             <section class="media-social">
                 <a href="https://www.facebook.com/firhangael15"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
